x11proto-dri2 (2.6-1) UNRELEASED; urgency=low

  [ Julien Cristau ]
  * Remove Brice from Uploaders.
  * Wrap the Build-Depends control field.
  * Drop unnecessary Pre-Depends on x11-common.

  [ Cyril Brulebois ]
  * New upstream release.

 -- Cyril Brulebois <kibi@debian.org>  Thu, 30 Jun 2011 00:37:11 +0200

x11proto-dri2 (2.3-1) unstable; urgency=low

  * New upstream release.
  * Add myself to Uploaders.
  * B-D explicitly on debhelper (>= 5), which matches debian/compat.
  * B-D on pkg-config, needed for PKG_PROG_PKG_CONFIG (pulled through
    XORG_DEFAULT_OPTIONS in configure.ac).
  * Bump Standards-Version from 3.8.2 to 3.8.4 (no changes needed).

 -- Cyril Brulebois <kibi@debian.org>  Tue, 06 Apr 2010 15:23:52 +0200

x11proto-dri2 (2.2-2) unstable; urgency=low

  * Bump xutils-dev build dependencies to 1:7.5~1 for util-macros 1.3.0
    (closes: #574497).

 -- Brice Goglin <bgoglin@debian.org>  Sun, 21 Mar 2010 10:14:39 +0100

x11proto-dri2 (2.2-1) unstable; urgency=low

  [ Timo Aaltonen ]
  * New upstream release. (LP: #377090, closes: #569259)

  [ Julien Cristau ]
  * Rename the build directory to not include DEB_BUILD_GNU_TYPE for no
    good reason.  Thanks, Colin Watson!
  * Remove myself from Uploaders

  [ Brice Goglin ]
  * Add myself to Uploaders.

 -- Brice Goglin <bgoglin@debian.org>  Thu, 11 Feb 2010 13:55:45 +0100

x11proto-dri2 (2.1-1) unstable; urgency=low

  * New upstream release.
  * Bump Standards-Version to 3.8.2.

 -- Julien Cristau <jcristau@debian.org>  Fri, 19 Jun 2009 17:30:30 +0200

x11proto-dri2 (2.0-1) unstable; urgency=low

  * New upstream release.
  * Add build-dep on xutils-dev >= 1:7.4+4.
  * Install the upstream changelog.
  * Bump Standards-Version to 3.8.1.
  * Bump dh compat to 5 to make lintian happy.

 -- Julien Cristau <jcristau@debian.org>  Mon, 08 Jun 2009 16:50:28 +0200

x11proto-dri2 (1.99.3-1) unstable; urgency=low

  [ Timo Aaltonen ]
  * New upstream release.

  [ Julien Cristau ]