@@ -4,9 +4,9 @@ Priority: optional
 Maintainer: Debian X Strike Force <debian-x@lists.debian.org>
 Uploaders: Cyril Brulebois <kibi@debian.org>
 Build-Depends:
- debhelper (>= 5),
- autoconf,
- automake,
+ debhelper (>= 8),
+ dh-autoreconf,
+ quilt,
  xutils-dev (>= 1:7.5~1),
  pkg-config,
 Standards-Version: 3.8.4
