@@ -1,88 +1,12 @@
 #!/usr/bin/make -f
-# debian/rules for the Debian x11proto-dri2 package.
-# Copyright © 2004 Scott James Remnant <scott@netsplit.com>
-# Copyright © 2005 Daniel Stone <daniel@fooishbar.org>
-# Copyright © 2005 David Nusinow <dnusinow@debian.org>
 
-# Uncomment this to turn on verbose mode.
-#export DH_VERBOSE=1
+# Install in debian/tmp to retain control through dh_install:
+override_dh_auto_install:
+	dh_auto_install --destdir=debian/tmp
 
-PACKAGE = x11proto-dri2-dev
+# Forget no-one:
+override_dh_install:
+	dh_install --fail-missing
 
-.PHONY: autogen
-autogen: autogen-stamp
-autogen-stamp:
-	dh_testdir
-
-	autoreconf -vfi
-	touch autogen-stamp
-
-.PHONY: configure
-configure: configure-stamp
-configure-stamp: autogen-stamp
-	dh_testdir
-
-	test -d build || mkdir build
-	cd build && \
-	../configure --prefix=/usr --mandir=\$${prefix}/share/man \
-	             --infodir=\$${prefix}/share/info --disable-shared \
-	             $(confflags) CFLAGS="$(CFLAGS)" 
-	touch configure-stamp
-
-build: build-stamp
-build-stamp: configure-stamp
-	dh_testdir
-
-	cd build && $(MAKE)
-
-	touch build-stamp
-
-clean:
-	dh_testdir
-	dh_testroot
-	rm -f *-stamp
-
-	rm -f config.cache config.log config.status
-	rm -f */config.cache */config.log */config.status
-	rm -f conftest* */conftest*
-	rm -rf autom4te.cache */autom4te.cache
-	rm -rf build
-	rm -f aclocal.m4 configure install-sh missing
-	rm -f config.guess config.sub
-	rm -f Makefile.in
-
-	dh_clean
-
-install: build
-	dh_testdir
-	dh_testroot
-	dh_clean -k
-	dh_installdirs
-
-	cd build && $(MAKE) DESTDIR=$(CURDIR)/debian/tmp install
-
-# Build architecture-independent files here.
-binary-indep: build install
-	dh_testdir
-	dh_testroot
-
-	dh_installdocs dri2proto.txt
-	dh_installman
-	dh_install --sourcedir=debian/tmp --list-missing
-	dh_installchangelogs ChangeLog
-	dh_link
-	dh_strip
-	dh_compress
-	dh_fixperms
-	dh_installdeb
-	dh_shlibdeps
-	dh_gencontrol
-	dh_md5sums
-	dh_builddeb
-
-# Build architecture-dependent files here.
-binary-arch: build install
-# Nothing to do
-
-binary: binary-indep binary-arch
-.PHONY: build clean binary-indep binary-arch binary install
+%:
+	dh $@ --with quilt,autoreconf --builddirectory=build/
