@@ -1,2 +1,3 @@
 usr/include/X11/extensions/*
 usr/lib/pkgconfig/dri2proto.pc
+usr/share/doc/dri2proto/dri2proto.txt usr/share/doc/x11proto-dri2-dev
