@@ -7,6 +7,11 @@ x11proto-dri2 (2.6-1) UNRELEASED; urgency=low
 
   [ Cyril Brulebois ]
   * New upstream release.
+  * Switch to dh:
+    - Bump debhelper build-dep and compat to 8.
+    - Use dh-autoreconf and quilt sequences, rewrite rules file.
+    - Ship dri2proto.txt through dh_install.
+    - Add placeholder quilt series file.
 
  -- Cyril Brulebois <kibi@debian.org>  Thu, 30 Jun 2011 00:37:11 +0200
 
